--- a/src/app/components/Navbar/style.module.css
+++ b/src/app/components/Navbar/style.module.css
@@ -4,6 +4,8 @@
   justify-content: center;
   height: 100px;
   width: 100%;
+
+  background-color: var(--color-bg);
 }
 
 .logo {
